1) improved error handling 2) added more tests error cases